--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.pentaho</groupId>
@@ -32,6 +32,7 @@
     <!-- Added for fragment prototype -->
     <org.apache.avro.version>1.8.0</org.apache.avro.version>
     <parquet.version>1.15.2</parquet.version>
+    <parquet-pig.version>1.15.2</parquet-pig.version>
     <sqoop.version>1.4.6.2.6.0.3-8</sqoop.version>
     <pig.version>0.16.0.2.6.0.3-8</pig.version>
     <dependency.pig.classifier>h2</dependency.pig.classifier>
@@ -45,6 +46,7 @@
     <shim-bundle-plugin.version>1.1</shim-bundle-plugin.version>
     <zookeeper.version>3.9.3</zookeeper.version>
     <org.apache.hbase.thirdparty.version>2.1.0</org.apache.hbase.thirdparty.version>
+    <netty.version>4.1.128.Final</netty.version>
     <snakeyaml.version>2.2</snakeyaml.version>
     <dnsjava.version>3.6.0</dnsjava.version>
   </properties>
